v0.14.4/_sources/generated/statsmodels.discrete.discrete_model.LogitResults.rst.txt
statsmodels.discrete.discrete\_model.LogitResults
=================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: LogitResults
   :exclude-members: conf_int,cov_params,f_test,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,pred_table,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~LogitResults.conf_int
      ~LogitResults.cov_params
      ~LogitResults.f_test
      ~LogitResults.get_distribution
      ~LogitResults.get_influence
      ~LogitResults.get_margeff
      ~LogitResults.get_prediction
      ~LogitResults.info_criteria
      ~LogitResults.initialize
      ~LogitResults.load
      ~LogitResults.normalized_cov_params
      ~LogitResults.pred_table
      ~LogitResults.predict
      ~LogitResults.remove_data
      ~LogitResults.save
      ~LogitResults.score_test
      ~LogitResults.set_null_options
      ~LogitResults.summary
      ~LogitResults.summary2
      ~LogitResults.t_test
      ~LogitResults.t_test_pairwise
      ~LogitResults.wald_test
      ~LogitResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~LogitResults.aic
      ~LogitResults.bic
      ~LogitResults.bse
      ~LogitResults.fittedvalues
      ~LogitResults.im_ratio
      ~LogitResults.llf
      ~LogitResults.llnull
      ~LogitResults.llr
      ~LogitResults.llr_pvalue
      ~LogitResults.prsquared
      ~LogitResults.pvalues
      ~LogitResults.resid_dev
      ~LogitResults.resid_generalized
      ~LogitResults.resid_pearson
      ~LogitResults.resid_response
      ~LogitResults.tvalues
      ~LogitResults.use_t
   
   
   